WebCore/html/canvas/WebGLBuffer.h
@@ -39,10 +39,6 @@ namespace WebCore {
         virtual ~WebGLBuffer() { deleteObject(); }
         
         static PassRefPtr<WebGLBuffer> create(WebGLRenderingContext*);
-        
-        // For querying previously created objects via e.g. getFramebufferAttachmentParameter
-        // FIXME: should consider canonicalizing these objects
-        static PassRefPtr<WebGLBuffer> create(WebGLRenderingContext*, Platform3DObject);
 
         bool associateBufferData(unsigned long target, int size);
         bool associateBufferData(unsigned long target, ArrayBufferView* array);
@@ -59,8 +55,7 @@ namespace WebCore {
 
     protected:
         WebGLBuffer(WebGLRenderingContext*);
-        WebGLBuffer(WebGLRenderingContext*, Platform3DObject obj);
-        
+
         virtual void _deleteObject(Platform3DObject o);
     
     private:
